# Optimizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.cpp  main.cpp  optim.cpp  optim.h  utils.cpp  utils.h
costfunction/: CMakeLists.txt  base.hpp  quadratic.cpp  quadratic.hpp
optim/: CMakeLists.txt  gradient_descent.cpp  gradient_descent.hpp
